syntax = "proto3";

package xray.app.reverse;
option csharp_namespace = "Xray.Proxy.Reverse";
option go_package = "github.com/xtls/xray-core/app/reverse";
option java_package = "com.xray.proxy.reverse";
option java_multiple_files = true;

message Control {
  enum State {
    ACTIVE = 0;
    DRAIN = 1;
  }

  State state = 1;
  bytes random = 99;
}

message BridgeConfig {
  string tag = 1;
  string domain = 2;
  uint32 maxConcurrency = 3;
  uint32 maxConnections = 4;
}

message PortalConfig {
  string tag = 1;
  string domain = 2;
}

message Config {
  repeated BridgeConfig bridge_config = 1;
  repeated PortalConfig portal_config = 2;
}
